@@ -34,6 +34,9 @@
    - dtucker@cvs.openbsd.org 2013/11/07 01:12:51
      [regress/rekey.sh]
      Factor out the data transfer rekey tests
+   - dtucker@cvs.openbsd.org 2013/11/07 02:48:38
+     [regress/integrity.sh regress/cipher-speed.sh regress/try-ciphers.sh]
+     Use ssh -Q instead of hardcoding lists of ciphers or MACs.
 
 20131104
  - (djm) OpenBSD CVS Sync
